# Lan-Transfer

./: .gitignore  Makefile  README.md  build.bat  install.bat  install.sh  lan-transfer.spec  lan.py  pyproject.toml  requirements.txt  setup.py  uninstall.bat  uninstall.sh  update.sh
lan_transfer/: __init__.py  cli.py  crypto.py  discover.py  receiver.py  sender.py  utils.py
